--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,25 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.3.jar=lib/commons-codec-1.3.jar
-file.reference.gluegen-rt-natives-linux-amd64.jar=lib/gluegen-rt-natives-linux-amd64.jar
-file.reference.gluegen-rt-natives-linux-i586.jar=lib/gluegen-rt-natives-linux-i586.jar
-file.reference.gluegen-rt-natives-macosx-universal.jar=lib/gluegen-rt-natives-macosx-universal.jar
 file.reference.gluegen-rt-natives-windows-amd64.jar=lib/gluegen-rt-natives-windows-amd64.jar
-file.reference.gluegen-rt-natives-windows-i586.jar=lib/gluegen-rt-natives-windows-i586.jar
 file.reference.gluegen-rt.jar=lib/gluegen-rt.jar
-file.reference.gluegen.jar=lib/gluegen.jar
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
-file.reference.jade.jar=lib/jade.jar
-file.reference.JadeAgentServer.jar=lib/JadeAgentServer.jar
 file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.jfreesvg-2.0.jar=lib/jfreesvg-2.0.jar
-file.reference.JOCL-0.1.9.jar=lib/JOCL-0.1.9.jar
-file.reference.jogl-all-natives-linux-amd64.jar=lib/jogl-all-natives-linux-amd64.jar
-file.reference.jogl-all-natives-linux-i586.jar=lib/jogl-all-natives-linux-i586.jar
-file.reference.jogl-all-natives-macosx-universal.jar=lib/jogl-all-natives-macosx-universal.jar
 file.reference.jogl-all-natives-windows-amd64.jar=lib/jogl-all-natives-windows-amd64.jar
-file.reference.jogl-all-natives-windows-i586.jar=lib/jogl-all-natives-windows-i586.jar
 file.reference.jogl-all-noawt.jar=lib/jogl-all-noawt.jar
 file.reference.jogl-all.jar=lib/jogl-all.jar
 file.reference.junit-4.11.jar=lib/junit-4.11.jar
@@ -57,26 +45,14 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.JOCL-0.1.9.jar}:\
-    ${file.reference.JadeAgentServer.jar}:\
     ${file.reference.commons-codec-1.3.jar}:\
-    ${file.reference.gluegen-rt-natives-linux-amd64.jar}:\
-    ${file.reference.gluegen-rt-natives-linux-i586.jar}:\
-    ${file.reference.gluegen-rt-natives-macosx-universal.jar}:\
     ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
-    ${file.reference.gluegen-rt-natives-windows-i586.jar}:\
     ${file.reference.gluegen-rt.jar}:\
-    ${file.reference.gluegen.jar}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.jade.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jfreesvg-2.0.jar}:\
-    ${file.reference.jogl-all-natives-linux-amd64.jar}:\
-    ${file.reference.jogl-all-natives-linux-i586.jar}:\
-    ${file.reference.jogl-all-natives-macosx-universal.jar}:\
     ${file.reference.jogl-all-natives-windows-amd64.jar}:\
-    ${file.reference.jogl-all-natives-windows-i586.jar}:\
     ${file.reference.jogl-all-noawt.jar}:\
     ${file.reference.jogl-all.jar}:\
     ${file.reference.junit-4.11.jar}
@@ -124,7 +100,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
