--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,7 +100,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
